--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -51,12 +51,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #9d7b7b;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #6c6c6c;
 }
 button:focus,
 button:focus-visible {
@@ -66,13 +66,13 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #046bc5;
-    background-color: #ffffff;
+    background-color: #130909;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #0f0808;
   }
 }
 
